some bugfixes before i probably break the entirety of localstorage for a bit
i fixed the issue with the "h" showing up on mobile, i also made it so that the auto command url param thing doesn't break on startup

essentially what it would do is:

when someone would do a fresh startup of console from a url with the auto command parameter, it would run the command, while it was doing the fancy startup sequence, so i fixed it, so that now it runs that after the sequence is over

--- a/main.css
+++ b/main.css
@@ -279,7 +279,7 @@ pre {
 .text-size-guide {
   position: absolute;
   z-index: 9000;
-  top: -20px;
-  left: -20px;
+  top: -200px;
+  left: -200px;
   margin: 0px;
 }
